# gstreamer_c

./: .gitignore  CMakeLists.txt  README.md  build.sh  docker-compose.yml  run_test_gstreamer_gdb.sh  run_with_logs.sh  vcpkg.json
config/: config.json
docs/superpowers/plans/: 2026-05-19-cpp-restapi-camera.md  2026-05-19-gstreamer-camera-restream.md  2026-05-20-motion-cpu-reduction.md  2026-05-20-motion-debug-rtsp.md  2026-05-20-motion-recording-playback.md  2026-05-20-recording-http-range.md
docs/superpowers/specs/: 2026-05-19-cpp-restapi-camera-design.md  2026-05-19-gstreamer-camera-restream-design.md  2026-05-20-motion-cpu-reduction-design.md  2026-05-20-motion-debug-rtsp-design.md  2026-05-20-motion-recording-playback-design.md  2026-05-20-recording-http-range-design.md
python/: ai_consumer.py
sql/: 001_init_cameras.sql  002_init_ai_jobs.sql
src/: AiComponent.hpp  App.cpp  AppComponent.hpp  DatabaseComponent.hpp  GStreamerComponent.hpp  SwaggerComponent.hpp  WebSocketComponent.hpp
src/ai/: AiCatalog.hpp  AiManager.hpp  AiResult.hpp  Config.hpp  CpuCrop.cc  CpuCrop.hpp  DmaHeapBuffer.hpp  FrameQueue.hpp  FrameTypes.hpp  JpegEncoder.hpp  ResultPublisher.hpp  RgaConverter.hpp  RgaLock.hpp
src/ai/detect_ai/: common.h  face_align.cc  face_align.h  face_recognition.cc  face_recognition.h  file_utils.c  file_utils.h  image_utils.h  postprocess.cc  postprocess.h  yolov8.cc  yolov8.h  yolov8_pose.cc  yolov8_pose.h  yolov8_seg.cc  yolov8_seg.h
src/ai/models/: AiModel.hpp  Detector.hpp  FaceRecognitionModel.hpp  RfDetectModel.cc  RfDetectModel.hpp  Stage2Model.hpp  Yolov8DetectModel.hpp  Yolov8PoseModel.hpp  Yolov8SegModel.hpp
src/ai/pipeline/: AiCameraPipeline.hpp  AiJob.hpp
src/ai/transforms/: FaceAlignTransform.hpp  IdentityTransform.hpp  PlateAlignTransform.hpp  Transform.hpp
src/config/: ConfigComponent.hpp  ConfigDto.hpp
src/controller/: AiJobController.hpp  CameraController.hpp  ImageInferenceController.hpp  WebSocketController.hpp
src/db/: AiJobDb.hpp  CameraDb.hpp
src/dto/: AiCatalogDto.hpp  AiJobDto.hpp  CameraDto.hpp  RecordingDto.hpp  StatusDto.hpp  StreamStatusDto.hpp
src/http/: ByteRange.hpp  Uuid.hpp
src/service/: AiJobService.hpp  CameraRecordingSession.hpp  CameraService.hpp  CameraStreamSession.hpp  GStreamerService.hpp  HlsPlaylist.hpp  ImageInferenceService.hpp  RecordingTypes.hpp  SnapshotGrabber.hpp  StreamTypes.hpp
src/ws/: CameraStateSocket.hpp
tests/: StreamLogicTests.cpp
